# secure-software-design

./: CHANGELOG.md  CONTRIBUTING.md  IDEAS.md  README.md  SECURITY.md  publiccode.yml  security-rig-2025.pptx
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
.github/chatmodes/: rewrite.chatmode.md
.github/workflows/: ci.yaml
exercises/: README.md
exercises/api-gateway/: README.md  compose.yaml
exercises/attestation/: README.md
exercises/attestation/go-src/: go.mod
exercises/cis-benchmarks/: README.md  config.yaml
exercises/containers/: Dockerfile.cve  Dockerfile.hadolint  Dockerfile.java  Dockerfile.java2  Dockerfile.scratch  README.md
exercises/containers/go-src/: main.go
exercises/containers/java-src/: SecureApp.java
exercises/dataprotection/: README.md  compose.yaml
exercises/hardening/: README.md
exercises/identity-access-management/: .env  README.md  compose.yaml
exercises/identity-access-management/backend/: Dockerfile  pyproject.toml
exercises/identity-access-management/backend/app/: authentication.py  config.py  main.py
exercises/identity-access-management/backend/app/models/: user.py
exercises/identity-access-management/backend/app/routes/: main.py
exercises/identity-access-management/frontend/: Dockerfile  index.html  nginx.conf  package.json  (+1 more)
exercises/infra-as-code/: README.md
exercises/patch-management/: README.md  config.js  manifest.yaml
exercises/secrets/: .env  README.md  berry-age-key.txt  compose.yaml  test.yaml
scripts/: download.sh
(+19 files in other folders)
