[project]
name = "security-api"
version = "0.1.0"
description = "API voor security"
requires-python = ">=3.12"
dependencies = [
    "caldav>=1.4.0",
    "fastapi[standard]>=0.115.11",
    "openai>=1.66.5",
    "pydantic-settings>=2.8.1",
    "pyright>=1.1.396",
    "python-jose>=3.4.0",
    "ruff>=0.9.9",
]

